# rsz

./: .gitignore  CMakeLists.txt  Makefile  cmake_todo  file_parse.py  resizer.c  resizer.h  resizer_core.c  resizer_core.h  resizer_test.c  test_functions.h
api/: framer.h  resizer.h
functest/: CMakeLists.txt  color_convert_utils.c  color_convert_utils.h  png_utils.c  png_utils.h  test.c
src/: CMakeLists.txt  framer.c  resizer.c  resizer_core.c  utils.c  utils.h
test/: TestFirst.c  checks.h  file_parse.py  resizer_test.c  test_functions.h
unittest/: CMakeLists.txt  file_parse.py  framer_test.c  resizer_test.c  test_functions.h
